--- a/index.html
+++ b/index.html
@@ -305,13 +305,13 @@ CCVC aims to provide opportunities for all people to enjoy sport, make new frien
 		</div>
 	</div> -->
 	<footer>
-		<div class="container" s>
+		<div class="container">
 			<div class="row">
 				<div class="col-sm-6 text-center-mobile" style="width: 30%;">
 					<h3 class="white">CCVC</h3>
 					<p>&copy;Central Coast Volleyball Club </p>
 
-					<h5 class="light regular light-white">Shape your body and improve your health.</h5>
+					<h5 class="light regular light-white">More than just a club.</h5>
 					<div class="row" style="width: 100%;">
 						<ul class="social-footer">
 							<li><a href=""><i class="fa fa-facebook"></i></a></li>
@@ -331,6 +331,32 @@ CCVC aims to provide opportunities for all people to enjoy sport, make new frien
 							<img src="img/clothLogo.png" alt="Clothing brand" style="width: 15%; padding-left: 20px">
 						</div>
 					</div>
+				</div>
+			</div>
+			<hr style="width:100%;"> 
+			<div class="footer-links">
+				<div class="link-row">
+					<a href="play.html">Play</a>
+					<a href="contact.html">Contact-Us</a>
+					<a href="register.html">Register</a>
+					<a href="merch.html">Merch</a>
+					<a href="faq.html">FAQ</a>
+				</div>
+
+				<div class="link-row">
+					<a href="#">Ts & Cs</a>
+					<a href="contact.html">Youth Policy</a>
+					<a href="register.html">Info Pack</a>
+					<a href="merch.html">Covid Policy</a>
+					<a href="faq.html">Game Rules</a>
+				</div>
+
+				<div class="link-row">
+					<a href="play.html">Play</a>
+					<a href="contact.html">Contact-Us</a>
+					<a href="register.html">Register</a>
+					<a href="merch.html">Merch</a>
+					<a href="faq.html">FAQ</a>
 				</div>
 			</div>
 		</div>
