isolating navbar and footer

--- a/index.html
+++ b/index.html
@@ -41,28 +41,7 @@
 	</div>
 
 	<!-- Navbar -->
-	<nav class="navbar">
-
-		<button class="mobile-menu-toggle" aria-label="Toggle navigation">
-			<span></span>
-			<span></span>
-			<span></span>
-		</button>
-
-		<div class="container">
-            <a class="navbar-brand" href="index.html">
-                <img src="img/CCVC LOGO.png" alt="CCVC Logo">
-            </a>
-			<ul class="nav navbar-nav">
-				<li><a href="play.html">Play</a></li>
-				<li><a href="contact.html">Contact-Us</a></li>
-				<li><a href="register.html">Register</a></li>
-				<li><a href="merch.html">Merch</a></li>
-				<li><a href="faq.html" class="btn btn-blue">FAQ</a></li>
-			</ul>
-		</div>
-		
-	</nav>
+	<div id="navbar-placeholder"></div>
 
 	<header id="start" class="main">
 		<div class="container">
@@ -304,63 +283,7 @@ CCVC aims to provide opportunities for all people to enjoy sport, make new frien
 			</div>
 		</div>
 	</div> -->
-	<footer>
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-6 text-center-mobile" style="width: 30%;">
-					<h3 class="white">CCVC</h3>
-					<p>&copy;Central Coast Volleyball Club </p>
-
-					<h5 class="light regular light-white">More than just a club.</h5>
-					<div class="row" style="width: 100%;">
-						<ul class="social-footer">
-							<li><a href=""><i class="fa fa-facebook"></i></a></li>
-							<li><a href=""><i class="fa fa-twitter"></i></a></li>
-							<li><a href=""><i class="fa fa-google-plus"></i></a></li>
-						</ul>
-					</div>
-						
-				</div>
-				<div class="col-sm-6 text-center-mobile" style="width: 70%;">
-					<h3 class="white" style="padding-bottom: 0px;"> Brought to you by:</h3>
-					<div class="row opening-hours">
-						<div class="text-center-mobile" >
-							<img src="img/VNSW.png" alt="Volleyball Australia" style="width: 20%; padding-left: 20px">
-							<img src="img/clothLogo.png" alt="Clothing brand" style="width: 15%; padding-left: 20px">
-							<img src="img/VNSW.png" alt="Volleyball Australia" style="width: 20%; padding-left: 20px">
-							<img src="img/clothLogo.png" alt="Clothing brand" style="width: 15%; padding-left: 20px">
-						</div>
-					</div>
-				</div>
-			</div>
-			<hr style="width:100%;"> 
-			<div class="footer-links">
-				<div class="link-row">
-					<a href="play.html">Play</a>
-					<a href="contact.html">Contact-Us</a>
-					<a href="register.html">Register</a>
-					<a href="merch.html">Merch</a>
-					<a href="faq.html">FAQ</a>
-				</div>
-
-				<div class="link-row">
-					<a href="#">Ts & Cs</a>
-					<a href="contact.html">Youth Policy</a>
-					<a href="register.html">Info Pack</a>
-					<a href="merch.html">Covid Policy</a>
-					<a href="faq.html">Game Rules</a>
-				</div>
-
-				<div class="link-row">
-					<a href="play.html">Play</a>
-					<a href="contact.html">Contact-Us</a>
-					<a href="register.html">Register</a>
-					<a href="merch.html">Merch</a>
-					<a href="faq.html">FAQ</a>
-				</div>
-			</div>
-		</div>
-	</footer>
+	<div id="footer-placeholder"></div>
 	
 
 	
