--- a/play.html
+++ b/play.html
@@ -42,28 +42,7 @@
 	</div>
 
 	<!-- Navbar -->
-	<nav class="navbar">
-
-		<button class="mobile-menu-toggle" aria-label="Toggle navigation">
-			<span></span>
-			<span></span>
-			<span></span>
-		</button>
-
-		<div class="container">
-            <a class="navbar-brand" href="index.html">
-                <img src="img/CCVC LOGO.png" alt="CCVC Logo">
-            </a>
-			<ul class="nav navbar-nav">
-            <li class="active"><a href="play.html">Play</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-            <li><a href="register.html">Register</a></li>
-            <li><a href="merch.html">Merch</a></li>
-            <li><a href="faq.html" class="btn btn-blue">FAQ</a></li>
-        </ul>
-		</div>
-		
-	</nav>
+	<div id="navbar-placeholder"></div>
 
     <section id="timetable" style="margin-top: 110px; width:100vw">
 		
@@ -124,6 +103,7 @@
 		</div>
 		<div id="womens-info" class="play-info">
 			<h3> heres the info</h3>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.551025689162!2d151.35005567707748!3d-33.3827856734164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b72cb1859ee7e87%3A0x4a1f491559253c56!2sNiagara%20Park%20Stadium!5e0!3m2!1sen!2sau!4v1771737020252!5m2!1sen!2sau" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		</div>
     </section>
 
@@ -138,6 +118,7 @@
 		</div>
 		<div id="mens-info" class="play-info">
 			<h3> heres the info</h3>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.551025689162!2d151.35005567707748!3d-33.3827856734164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b72cb1859ee7e87%3A0x4a1f491559253c56!2sNiagara%20Park%20Stadium!5e0!3m2!1sen!2sau!4v1771737020252!5m2!1sen!2sau" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		</div>
     </section>
 
@@ -152,34 +133,42 @@
 		</div>
 		<div id="beginners-info" class="play-info">
 			<h3> heres the info</h3>
-		</div>
-    </section>
-
-	<section id="social" class="play-section" >
-		<div id="social-dropdown" class="play-dropdown session-color-2" >
-			<p id="social-button" class="play-button alt">
-				&#9660
-			</p>
-			<h2 style="color: #2c82c9; line-height: 2;">
-				Social Competition
-			</h2>
-		</div>
-		<div id="social-info" class="play-info">
-			<h3> heres the info</h3>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.551025689162!2d151.35005567707748!3d-33.3827856734164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b72cb1859ee7e87%3A0x4a1f491559253c56!2sNiagara%20Park%20Stadium!5e0!3m2!1sen!2sau!4v1771737020252!5m2!1sen!2sau" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		</div>
     </section>
 
 	<section id="abc" class="play-section" >
-		<div id="abc-dropdown" class="play-dropdown session-color-1" >
+		<div id="abc-dropdown" class="play-dropdown session-color-2" >
+			<p id="abc-button" class="play-button alt">
+				&#9660
+			</p>
+			<h2 style="color: #2c82c9; line-height: 2;">
+				ABC Grade Training
+			</h2>
+		</div>
+		<div id="abc-info" class="play-info">
+			<h3> 
+			Join us on Thursday nights at Niagara Park Stadium for social mixed training every week. From first-time players to experienced ones, we can find court space for you and your level of play.
+			Skills training and games, there is something for you at CCVC!
+			</h3>
+
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.551025689162!2d151.35005567707748!3d-33.3827856734164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b72cb1859ee7e87%3A0x4a1f491559253c56!2sNiagara%20Park%20Stadium!5e0!3m2!1sen!2sau!4v1771737020252!5m2!1sen!2sau" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+		</div>
+    </section>
+
+	<section id="scrimmage" class="play-section" >
+		<div id="scrimmage" class="play-dropdown session-color-1" >
 			<p id="scrimmage-button" class="play-button">
 				&#9660
 			</p>
 			<h2 style="color: gold; line-height: 2;">
 				Scrimmage Training
 			</h2>
+			
 		</div>
 		<div id="scrimmage-info" class="play-info">
 			<h3> heres the info</h3>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.551025689162!2d151.35005567707748!3d-33.3827856734164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b72cb1859ee7e87%3A0x4a1f491559253c56!2sNiagara%20Park%20Stadium!5e0!3m2!1sen!2sau!4v1771737020252!5m2!1sen!2sau" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		</div>
     </section>
 
@@ -194,14 +183,15 @@
 		</div>
 		<div id="social-info" class="play-info">
 			<h3> heres the info</h3>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3329.313774981068!2d151.41967359308566!3d-33.44113080478988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b72c9f9db226a9d%3A0xeedb8ff9be7652d1!2sGuzman%20y%20Gomez%20Stadium!5e0!3m2!1sen!2sau!4v1771737244947!5m2!1sen!2sau" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		</div>
     </section>
 
-	<section style="height: 100px;">
+	<section style="height: 600px;">
 
 	</section>
 
-	
+	<div id="footer-placeholder"></div>
 
     
 
