--- a/register.html
+++ b/register.html
@@ -42,37 +42,12 @@
 	</div>
 
 	<!-- Navbar -->
-	<nav class="navbar">
-
-		<button class="mobile-menu-toggle" aria-label="Toggle navigation">
-			<span></span>
-			<span></span>
-			<span></span>
-		</button>
-
-		<div class="container">
-            <a class="navbar-brand" href="index.html">
-                <img src="img/CCVC LOGO.png" alt="CCVC Logo">
-            </a>
-			<ul class="nav navbar-nav">
-            <li><a href="play.html">Play</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-            <li class="active"><a href="register.html">Register</a></li>
-            <li><a href="merch.html">Merch</a></li>
-            <li><a href="faq.html" class="btn btn-blue">FAQ</a></li>
-        </ul>
-		</div>
-		
-	</nav>
-
-    
-
-	<section style="height: 100px;">
-
-	</section>
+	<div id="navbar-placeholder"></div>
+	
+	<section style="height: 600px;"></section>
 
 	
-
+	<div id="footer-placeholder"></div>
     
 
 
