--- a/contact.html
+++ b/contact.html
@@ -42,28 +42,7 @@
 	</div>
 
 	<!-- Navbar -->
-	<nav class="navbar">
-
-		<button class="mobile-menu-toggle" aria-label="Toggle navigation">
-			<span></span>
-			<span></span>
-			<span></span>
-		</button>
-
-		<div class="container">
-            <a class="navbar-brand" href="index.html">
-                <img src="img/CCVC LOGO.png" alt="CCVC Logo">
-            </a>
-			<ul class="nav navbar-nav">
-            <li><a href="play.html">Play</a></li>
-            <li class="active"><a href="contact.html">Contact Us</a></li>
-            <li><a href="register.html">Register</a></li>
-            <li><a href="merch.html">Merch</a></li>
-            <li><a href="faq.html" class="btn btn-blue">FAQ</a></li>
-        </ul>
-		</div>
-		
-	</nav>
+	<div id="navbar-placeholder"></div>
 
 	<div class="row title text-center" style="margin-top: 80px;">
 		<h2 style="margin-left: 10%; margin-right: 10%;">
@@ -137,6 +116,10 @@
 			</div>
 		</div>
 	</section>
+
+
+	<div id="footer-placeholder"></div>
+
     <script src="js/jquery-1.11.1.min.js"></script>
 	<script src="js/owl.carousel.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
